--- a/vochain/indexer/sqlc.yaml
+++ b/vochain/indexer/sqlc.yaml
@@ -27,6 +27,12 @@ overrides:
     go_type: "go.vocdoni.io/dvote/state.VoterID"
   - column: "tx_references.hash"
     go_type: "go.vocdoni.io/dvote/types.Hash"
+  - column: "token_transfers.from_account"
+    go_type: "go.vocdoni.io/dvote/types.AccountID"
+  - column: "token_transfers.to_account"
+    go_type: "go.vocdoni.io/dvote/types.AccountID"
+  - column: "token_transfers.tx_hash"
+    go_type: "go.vocdoni.io/dvote/types.Hash"
 
   # These types help remind us that the values are protobuf-encoded.
   - column: "processes.envelope_pb"
